# agentic-security

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEEDBACK.md  LICENSE  PRINCIPLES.md  README.md  REVIEW_CHECKLIST.md  ROADMAP.md  SECURITY.md  WHITEPAPER.md  agentic_security_guide.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml
benchmark/: __init__.py  run.py
data/: README.md  injection_dataset.json
diagrams/: README.md  detection_pipeline.excalidraw  dry_run.excalidraw  dual_llm.excalidraw  lethal_trifecta.excalidraw  mental_model.excalidraw
diagrams/mermaid/: camel.mmd  canary_tokens.mmd  combined_defense.mmd  defense_in_depth.mmd  delimiters.mmd  detection_pipeline.mmd  dry_run.mmd  dual_llm.mmd  framework_gap.mmd  instruction_hierarchy.mmd  lethal_trifecta.mmd  llm_as_judge.mmd  mental_model.mmd  ml_classifier.mmd  (+7 more)
docs/: ATTACK_TAXONOMY.md  CHEATSHEET.md  ROADMAP.md  THREAT_MODEL.md  TOOLS.md  TRADEOFFS.md  index.md  principles.md
guide/: index.md
patterns/: 00_baseline.py  01_delimiter.py  02_dual_llm.py  03_typed_extraction.py  04_dry_run.py  05_combined.py  __init__.py
principles/: index.html
scripts/: export_diagrams.mjs  export_guide.py  export_guide.sh  package.json
search/: search_index.json
techniques/: __init__.py  canary_tokens.py  ml_classifier.py
tests/: test_benchmark.py  test_camel.py  test_canary_tokens.py  test_delimiters.py  test_dry_run.py  test_dual_llm.py  test_llm.py  test_mcp_security.py  test_memory_security.py  test_ml_classifier.py  test_multi_agent.py  test_output_validation.py  test_tool_validation.py  test_typed_extraction.py  test_vector_similarity.py  test_xml_tagging.py  test_yara_detection.py
(+179 files in other folders)
