[project]
name = "agentic-security"
version = "0.1.0"
description = "Prompt injection defense patterns for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Luisa Lima" }
]
keywords = ["llm", "security", "prompt-injection", "ai-safety", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "marimo>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Prompt templates and injection test strings are intentionally long
"src/agentic_security/defenses/dry_run.py" = ["E501", "W291"]
"src/agentic_security/defenses/dual_llm.py" = ["E501"]
"src/agentic_security/defenses/typed_extraction.py" = ["E501"]
"src/agentic_security/scenario.py" = ["E501", "W291"]
"src/agentic_security/llm.py" = ["E501"]
"benchmark/run.py" = ["E501"]
# Notebooks contain markdown prose, code examples, and diagram strings
"notebooks/**/*.py" = ["E501", "W291", "W293", "F841", "F821", "F401", "F541", "I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
